--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "8.0.4",
+    "bootstrap": "4.5.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
+    "sass": "^1.43.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
